[package]
name = "rebg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
bitflags = "2.3.1"
bollard = "0.15.0"
capstone = "0.11.0"
flume = "0.10.14"
futures = "0.3.28"
goblin = "0.6.1"
hex = "0.4.3"
lazy_static = "1.4.0"
num-traits = "0.2.15"
oneshot = "0.1.5"
regex = "1.8.3"
tar = "0.4.40"
thiserror = "1.0.47"
tokio = "1.32.0"
