[package]
name = "rebg"
description = "rebg"
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
bitflags = "2.3.1"
bollard = "0.15.0"
capstone = { git = "https://github.com/joleeee/capstone-rs.git", rev = "47c31fae93ef752b445517e3eaf9ec203c742761" }
flume = "0.10.14"
futures = "0.3.28"
goblin = "0.6.1"
hex = "0.4.3"
itertools = "0.11.0"
lazy_static = "1.4.0"
num-traits = "0.2.15"
oneshot = "0.1.5"
regex = "1.8.3"
serde = "1.0.188"
serde_json = "1.0.107"
tar = "0.4.40"
thiserror = "1.0.47"
tokio = "1.32.0"
tungstenite = "0.20.1"
